# line-count

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/: cli.py  exceptions.py  line_counting.py  main.py
src/linecount/: __init__.py  cli.py  line_counting.py
test/: README.md  test.py
test/testfiles/: test_comments_advanced.txt  test_comments_simple.txt  test_lines.txt  test_sloc.txt
test/testfiles/test_dir/test_subdir/: test_subdir.txt
