[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "linecount"
version = "0.1.1"

authors = [
  {name="AlexanderJCS"},
]

description = "A small example package"
readme = "README.md"

requires-python = ">=3.8"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/AlexanderJCS/line-count"
Issues = "https://github.com/AlexanderJCS/line-count/issues"

[project.scripts]
linecount = "cli:cli"