[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "linecount"
version = "1.1.1"

authors = [
  {name="AlexanderJCS"},
]

description = "Count lines of files!"
readme = "README.md"

requires-python = ">=3.6"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
repository = "https://github.com/AlexanderJCS/line-count"
homepage = "https://github.com/AlexanderJCS/line-count"
issues = "https://github.com/AlexanderJCS/line-count/issues"

[project.scripts]
linecount = "linecount.cli:cli"

[options.packages.find]
where = "src"
exclude = ["test"]